TP8-Tavarifun/tests/bad/struct/t01.ml
type pair = { left: int; right: int } ;;
let a : pair = { left = 1; right = true } ;;
